fix format wrap

--- a/src/resources/views/components/format-list/style.scss
+++ b/src/resources/views/components/format-list/style.scss
@@ -4,5 +4,6 @@
 
   &__item {
     margin: 0 0.25rem 0.25rem 0;
+    max-width: 100%;
   }
 }
