--- a/src/resources/views/components/format/style.scss
+++ b/src/resources/views/components/format/style.scss
@@ -1,4 +1,4 @@
-.o-format {
+.c-format {
 
   display: inline-flex;
   padding: 0.2rem 0.5rem;
@@ -7,7 +7,7 @@
   color: color(white);
   font-weight: 700;
   transition: background-color 0.1s $ease, box-shadow 0.1s $ease;
-  white-space: nowrap;
+  max-width: 100%;
 
   a:hover &,
   &:hover {
@@ -19,6 +19,12 @@
     box-shadow:
       $active-shadow,
     ;
+  }
+
+  &__text {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
 }
